--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Academics &mdash; Website by Colorlib</title>
+  <title>Academics &mdash;</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -45,71 +45,8 @@
     </div>
 
 
-    <div class="py-2 bg-light">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-9 d-none d-lg-block">
-            <a href="#" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> Have a questions?</a> 
-            <a href="#" class="small mr-3"><span class="icon-phone2 mr-2"></span> 10 20 123 456</a> 
-            <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span> info@mydomain.com</a> 
-          </div>
-          <div class="col-lg-3 text-right">
-            <a href="login" class="small mr-3"><span class="icon-unlock-alt"></span> Log In</a>
-            <a href="register" class="small btn btn-primary px-4 py-2 rounded-0"><span class="icon-users"></span> Register</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-
-      <div class="container">
-        <div class="d-flex align-items-center">
-          <div class="site-logo">
-            <a href="/" class="d-block">
-              <img src="images/logo.jpg" alt="Image" class="img-fluid">
-            </a>
-          </div>
-          <div class="mr-auto">
-            <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li>
-                  <a href="/" class="nav-link text-left">Home</a>
-                </li>
-                <li class="has-children">
-                  <a href="about" class="nav-link text-left">About Us</a>
-                  <ul class="dropdown">
-                    <li><a href="teachers">Our Teachers</a></li>
-                    <li><a href="about">Our School</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="admissions" class="nav-link text-left">Admissions</a>
-                </li>
-                <li>
-                  <a href="courses" class="nav-link text-left">Courses</a>
-                </li>
-                <li>
-                    <a href="contact" class="nav-link text-left">Contact</a>
-                  </li>
-              </ul>                                                                                                                                                                                                                                                                                          </ul>
-            </nav>
-
-          </div>
-          <div class="ml-auto">
-            <div class="social-wrap">
-              <a href="#"><span class="icon-facebook"></span></a>
-              <a href="#"><span class="icon-twitter"></span></a>
-              <a href="#"><span class="icon-linkedin"></span></a>
-
-              <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
-                class="icon-menu h3"></span></a>
-            </div>
-          </div>
-         
-        </div>
-      </div>
-
-    </header>
+      <div th:replace="fragments::bar"></div>
+      <header th:replace="fragments::header"></header>
 
     
     <div class="site-section ftco-subscribe-1 site-blocks-cover pb-4" style="background-image: url('static/images/bg_1.jpg')">
@@ -137,23 +74,30 @@
 
 
             <div class="row justify-content-center">
-                <div class="col-md-5">
+                <form id="contact" method="post" th:action="@{/saveuser}" enctype="multipart/form-data" th:object="${newUser}">
                     <div class="row">
-                        <div class="col-md-12 form-group">
-                            <label for="username">Username</label>
-                            <input type="text" id="username" class="form-control form-control-lg">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <input class="form-control" th:field="*{id}" type="text" placeholder="id" required>
                         </div>
-                        <div class="col-md-12 form-group">
-                            <label for="pword">Password</label>
-                            <input type="password" id="pword" class="form-control form-control-lg">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <textarea class="form-control" th:field="*{username}" type="text" placeholder="username" required></textarea>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <textarea class="form-control" th:field="*{password}" type="text" placeholder="password" required></textarea>
+                        </div>
+                        <div class="col-lg-12">
+                            <textarea class="form-control" th:field="*{firstName}" type="text" placeholder="first name" required></textarea>
+                        </div>
+                        <div class="col-lg-12">
+                            <textarea class="form-control" th:field="*{lastName}" type="text" placeholder="last name" required></textarea>
+                        </div>
+                        <div class="col-lg-12">
+
+                            <button id="form-submit" class="tm-search-button btn btn-primary btn-lg px-5" type="submit">Register<i class="fas fa-ad tm-search-icon" aria-hidden="true"></i></button>
+
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <input type="submit" value="Register" class="btn btn-primary btn-lg px-5">
-                        </div>
-                    </div>
-                </div>
+                </form>
             </div>
             
 
@@ -161,64 +105,9 @@
         </div>
     </div>
 
-    
 
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <p class="mb-4"><img src="images/logo.png" alt="Image" class="img-fluid"></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo minima qui dolor, iusto iure.</p>  
-            <p><a href="#">Learn More</a></p>
-          </div>
-          <div class="col-lg-3">
-            <h3 class="footer-heading"><span>Our Campus</span></h3>
-            <ul class="list-unstyled">
-                <li><a href="#">Acedemic</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Our Interns</a></li>
-                <li><a href="#">Our Leadership</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Human Resources</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Our Courses</span></h3>
-              <ul class="list-unstyled">
-                  <li><a href="#">Math</a></li>
-                  <li><a href="#">Science &amp; Engineering</a></li>
-                  <li><a href="#">Arts &amp; Humanities</a></li>
-                  <li><a href="#">Economics &amp; Finance</a></li>
-                  <li><a href="#">Business Administration</a></li>
-                  <li><a href="#">Computer Science</a></li>
-              </ul>
-          </div>
-          <div class="col-lg-3">
-              <h3 class="footer-heading"><span>Contact</span></h3>
-              <ul class="list-unstyled">
-                  <li><a href="#">Help Center</a></li>
-                  <li><a href="#">Support Community</a></li>
-                  <li><a href="#">Press</a></li>
-                  <li><a href="#">Share Your Story</a></li>
-                  <li><a href="#">Our Supporters</a></li>
-              </ul>
-          </div>
-        </div>
 
-        <div class="row">
-          <div class="col-12">
-            <div class="copyright">
-                <p>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
+      <div th:replace="fragments::footer"></div>
 
   </div>
   <!-- .site-wrap -->
