Added Alatoo's logo

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -49,9 +49,9 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-9 d-none d-lg-block">
-                    <a></a>
-                    <a></a>
-                    <a></a>
+                    <a>Supported by</a>
+                    <a> </a>
+                    <a><img width="38" height="38" style="margin-left: 4px" src="https://ocs.alatoo.edu.kg/pluginfile.php/1/core_admin/logo/0x200/1679882010/Logo.png"></a>
                 </div>
                 <div class="col-lg-3 text-right">
                     <a href="login" sec:authorize="isAnonymous()" class="small mr-3"><span class="icon-unlock-alt"></span> Log In</a>
