--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-heading">
-                            <h2>Add estate</h2>
+                            <h2>Add User</h2>
                         </div>
                     </div>
                     <div class="col-md-8">
